--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,1 +1,6 @@
-<p><a href="http://www.commemorativeairforce.org/component/content/article/90-about-the-caf/117-copyright-information">Copyright</a> &copy; 2002 - <%= DateTime.now.strftime('%Y') %> Commemorative Air Force, Inc. except as otherwise marked. All rights reserved.</p>
+<ul class="social2" style = "float: right;">
+    <li><a href="https://www.facebook.com/DevilDogSquadron/" target="blank"><i class="fa fa-facebook"></i></a></li>
+    <li><a href="https://twitter.com/DevilDog_PBJ"><i class="fa fa-twitter"></i></a></li>
+</ul>
+<br />
+<p style="clear: both;"><a href="http://www.commemorativeairforce.org/component/content/article/90-about-the-caf/117-copyright-information">Copyright</a> &copy; 2002 - <%= DateTime.now.strftime('%Y') %> Commemorative Air Force, Inc. except as otherwise marked.<br />All rights reserved.</p>
