--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -7,6 +7,9 @@
   <%= csrf_meta_tags %>
   <meta name="viewport" content="initial-scale=1, maximum-scale=1">
 
+<script src="https://use.fontawesome.com/75553902ed.js"></script>
+<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+
 <meta name="google-site-verification" content="bDCd2KypL07hC0KWnjy0SK9rdQe7Ey6E_608grWInkA" />
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
