--- a/app/views/members/account.html.erb
+++ b/app/views/members/account.html.erb
@@ -47,5 +47,6 @@
 </div>
 
 <%= link_to 'Edit / Make Updates', account_edit_path(@member) %> | 
+<%= link_to 'Change Password', 'users/edit'  %> | 
 <%= link_to 'Member Home', pages_member_home_path %>
 
