--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -15,7 +15,7 @@
   <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
   <%= f.password_field :current_password %></div>
 
-  <div><%= f.submit "Update" %></div>
+  <div style="margin-top: 1em;"><%= f.submit "Update", :data => { :disable_with => "Submitting..." }, :class => "btn-default btn btn-big btn-primary" %></div>
 <% end %>
 
 <h3>Cancel my account</h3>
