--- a/app/assets/stylesheets/screen/scaffolds.css.scss
+++ b/app/assets/stylesheets/screen/scaffolds.css.scss
@@ -37,6 +37,8 @@ div {
 
 #notice {
   color: green;
+  margin-left: 14em;
+  padding-top: 1em;
 }
 
 .field_with_errors {
@@ -70,5 +72,6 @@ div {
   ul li {
     font-size: 12px;
     list-style: square;
+    margin-left: 1em;
   }
 }
