--- a/app/views/lhfe_flights/show.html.erb
+++ b/app/views/lhfe_flights/show.html.erb
@@ -57,7 +57,7 @@ By email: <a href="mailto:rides@devildogsquadron.com">rides@devildogsquadron.com
     <br />
   <%= @lhfe_flight.event.location.city %>, <%= @lhfe_flight.event.location.state %><br />
   <% if @lhfe_flight.flight_start_time < Time.now %>
-  <p style="font-size: 0.75em;">This flight is no longer available.</p>
+  <p style="font-size: 0.75em;">This flight is no longer available to book online. Check at the aircraft to see if seats are still available.</p>
   <% else %>
   <% if ((@lhfe_flight.event.start - Time.now).to_f / 1.day).floor >= 1 %>
     <%= number_to_currency(@lhfe_flight.discount_price) %>
