updated facebook code

--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -34,8 +34,7 @@ $(document).ready(function() {
 <body>
 
 <div id="fb-root"></div>
-<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v10.0&appId=1351035148316092&autoLogAppEvents=1" nonce="NV0JiJ8P"></script>
-
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v13.0" nonce="a4x83KTl"></script>
 <div id="container">
 
   <%= render 'layouts/header' %>
