--- a/app/views/event_added_notifier/created.html.erb
+++ b/app/views/event_added_notifier/created.html.erb
@@ -5,7 +5,7 @@
 <div style="max-width:600px">
 <table style="margin-left: 20px;border: solid #333;border-width: thin;border-collapse: separate;border-spacing: 0px;font-size: 14pt; font-family: Helvetica, Verdana, Geneva, Arial, sans-serif; color: #191919;">
   <tr>
-    <th colspan=2 style="text-align: left;background: #52782a;color: #fff;border-bottom: #CCC;border-width: 0 0 1px 0;border-style: none none solid none;padding: 3px;" >Trip Details:  - <strong><%= link_to @event.title, event_path(@event), :style => "color:#fff;" %></strong></th>
+    <th colspan=2 style="text-align: left;background: #52782a;color: #fff;border-bottom: #CCC;border-width: 0 0 1px 0;border-style: none none solid none;padding: 3px;" >Trip Details:  - <strong><%= link_to @event.title, "http://www.devildogsquadron.com" + event_path(@event), :style => "color:#fff;" %></strong></th>
   </tr>
   <tr style="background: #fff;">
     <td width="150px" style="border-bottom: #d6d68b;border-right: #d6d68b;border-width: 0 1px 1px 0;border-style: none solid solid none;padding: 3px;vertical-align: top;">Start: </td>
