added quick Links to add often used CAF resource links

--- a/app/views/pages/member_home.html.erb
+++ b/app/views/pages/member_home.html.erb
@@ -16,12 +16,7 @@
   <p><%= link_to "Renew Membership Online", membership_path %></p>
 </div>
 <div class="col-sm-6">
-  <h2>Recent Meeting Minutes:</h2>
-  <ul>
-    <li>July 2017</li>
-    <li>June 2017</li>
-    <li>May 2017</li>
-    </ul>
+<%= render 'quick_links' %>
 </div>
 </div>
 <hr />
