--- a/app/assets/stylesheets/screen/web_style.css
+++ b/app/assets/stylesheets/screen/web_style.css
@@ -114,6 +114,15 @@ article {
   -moz-osx-font-smoothing: grayscale;
 }
 
+ul {
+  list-style: disc;
+  margin: 0 0 1em 1.5em;
+}
+ol {
+  list-style: decimal;
+  margin: 0 0 1em 1.5em;
+}
+
 /* =Header
 -------------------------------------------------------------- */
 #container {
