--- a/app/views/ride_requests/_form.html.erb
+++ b/app/views/ride_requests/_form.html.erb
@@ -84,6 +84,7 @@
 
 <div class="clearer"></div>
   <div class="actions">
-    <%= f.submit "Put me on the list"%>
+
+    <%= f.submit  "Put me on the list", :data => { :disable_with => "Submitting..." },:class => "btn-default btn btn-big btn-primary" %>
   </div>
 <% end %>
