--- a/app/views/ride_requests/show.html.erb
+++ b/app/views/ride_requests/show.html.erb
@@ -41,7 +41,7 @@ Indicated interest at the following events:<br />
 </ul>
 <% end %>
 
-<p>Living History Flight Experience PrePay is <strong>$395</strong>, if you would like to prepay for your ride please use this link.</p>
+<p>Living History Flight Experience PrePay is <strong><%= number_to_currency(@product.value) %></strong> per seat, if you would like to prepay for your ride please click this Add to Cart button. (Flights are <%= number_to_currency(@product.alt_value) %> per seat during the event)</p>
 
 <div style="text-align: center;">
 <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
@@ -52,17 +52,17 @@ Indicated interest at the following events:<br />
 <input type="hidden" name="add" value="1">
 <input type="hidden" name="cmd" value="_cart">
 <input type="hidden" name="business" value="px_info@devildogsquadron.com">
-<input type="hidden" name="item_name" value="Living History Flight Experience">
-<input type="hidden" name="item_number" value="100">
-<input type="hidden" name="amount" value="395">
+<input type="hidden" name="item_name" value="<%= @product.name %>">
+<input type="hidden" name="item_number" value="<%= @product.item_no %>">
+<input type="hidden" name="amount" value="<%= @product.value %>">
 <input type="hidden" name="page_style" value="Primary">
-<input type="hidden" name="shipping" value="0">
+<input type="hidden" name="shipping" value="<%= @product.ship_handling %>">
 <input type="hidden" name="no_shipping" value="2">
 <input type="hidden" name="no_note" value="1">
 <input type="hidden" name="currency_code" value="USD">
 <input type="hidden" name="lc" value="US">
 <input type="hidden" name="bn" value="PP-ShopCartBF">
-
 </form>
 
 </div>
+
