--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Trips</h1>
 
-<table width="500" class="table_border">
+<table class="table_border">
   <tr>
     <th>Event</th>
     <th>Crew<br />Arrival</th>
@@ -13,11 +13,11 @@
 <% @trips.each do |trip| %>
   <tr class="<%= cycle('odd_row', 'even_row') %>">
     <td><%= link_to trip.event.title, trip_path(trip) %></td>
-    <td><% if !trip.crew_arrival.nil? %><%= trip.crew_arrival.strftime("%b %d - %H:%M %p") %><% end %></td>
-    <td><% if !trip.tug_time.nil? %><%= trip.tug_time.strftime("%b %d - %H:%M %p") %><% end %></td>
-    <td><% if !trip.wheels_up.nil? %><%= trip.wheels_up.strftime("%b %d - %H:%M %p") %><% end %></td>
-    <td><% if !trip.destination_eta.nil? %><%= trip.destination_eta.strftime("%b %d - %H:%M %p") %><% end %></td>
-    <td><% if !trip.return_eta.nil? %><%= trip.return_eta.strftime("%b %d - %H:%M %p") %><% end %></td>
+    <td><% if !trip.crew_arrival.nil? %><%= trip.crew_arrival.strftime("%b %d, %Y - %H:%M %p") %><% end %></td>
+    <td><% if !trip.tug_time.nil? %><%= trip.tug_time.strftime("%b %d, %Y - %H:%M %p") %><% end %></td>
+    <td><% if !trip.wheels_up.nil? %><%= trip.wheels_up.strftime("%b %d, %Y - %H:%M %p") %><% end %></td>
+    <td><% if !trip.destination_eta.nil? %><%= trip.destination_eta.strftime("%b %d, %Y - %H:%M %p") %><% end %></td>
+    <td><% if !trip.return_eta.nil? %><%= trip.return_eta.strftime("%b %d, %Y - %H:%M %p") %><% end %></td>
   </tr>
 <% end %>
 </table>
