--- a/app/views/trip_info_notifier/change.text.erb
+++ b/app/views/trip_info_notifier/change.text.erb
@@ -1,6 +1,6 @@
 The following trip information for <%= @trip.event.title %> has been updated on the website.
 
-Crew Arrival: <%= @trip.crew_arrival.strftime("%H:%M - %b %d, %Y") %>
+Crew Arrival: <%= @trip.crew_arrival.strftime("%H:%M - %a %b %d, %Y") %>
 
 Tug Time: <%= @trip.tug_time.strftime("%H:%M - %b %d, %Y") %>
 
@@ -8,7 +8,7 @@ Wheels up: <%= @trip.wheels_up.strftime("%H:%M - %b %d, %Y") %>
 
 Destination ETA: <%= @trip.destination_eta.strftime("%H:%M - %b %d, %Y") %>
 
-Return ETA: <%= @trip.return_eta.strftime("%H:%M - %b %d, %Y") %>
+Return ETA: <%= @trip.return_eta.strftime("%H:%M - %a %b %d, %Y") %>
 
 Distance (nm): <%= @trip.event.location.one_way_distance %> | ~<%= (@trip.event.location.one_way_distance.to_f/185).round(1) %> hours
 
