--- a/app/views/trips/_form.html.erb
+++ b/app/views/trips/_form.html.erb
@@ -86,8 +86,13 @@
 
 <div class="clearer"></div>
 <hr />
-Click checkbox to send email notification to trip participants. <%= check_box_tag 'email_notice' %>
+Click checkbox to send email notification to following trip participants. <%= check_box_tag 'email_notice' %>
 <hr />
+<ol>
+<% @trip.event.event_signups.each do |event_signup,i| %>
+  <li><%= event_signup.member.user.email %></li>
+<% end %>
+</ol>
 <div class="clearer"></div>
 
   <div class="actions">
